force-app/main/default/objects/RV_Valve_Structure_Translation__c/fields/Text14__c.field-meta.xml
<CustomField>
    <fullName>Text14__c</fullName>
    <label>Text14</label>
    <length>255</length>
    <type>Text</type>
</CustomField>