force-app/main/default/objects/RV_Valve_Structure_Translation__c/fields/Text17__c.field-meta.xml
<CustomField>
    <fullName>Text17__c</fullName>
    <label>Text17</label>
    <length>255</length>
    <type>Text</type>
</CustomField>