force-app/main/default/objects/RV_Valve_Structure_Translation__c/fields/TextOpp10__c.field-meta.xml
<CustomField>
    <fullName>TextOpp10__c</fullName>
    <label>TextOpp10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>