force-app/main/default/objects/RV_Valve_Structure_Translation__c/fields/TextOpp11__c.field-meta.xml
<CustomField>
    <fullName>TextOpp11__c</fullName>
    <label>TextOpp11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>