force-app/main/default/objects/RV_Valve_Structure_Translation__c/fields/TextOpp15__c.field-meta.xml
<CustomField>
    <fullName>TextOpp15__c</fullName>
    <label>TextOpp15</label>
    <length>255</length>
    <type>Text</type>
</CustomField>